# CloveriRecommend

./: .gitignore  README.md  alembic.ini  config.py  data.json  database.py  load_data.py  pyproject.toml  requirements.txt
app/: anonimizer.py  app.py  main.py  models.py  schemas.py
app/db/: database.py
app/db/alembic/: env.py
app/db/alembic/versions/: be5781c92ce0_init_migration.py
app/models/: user.py
app/routers/: user.py
app/schemas/: user.py
migrations/: env.py
ml/: anonimizer.py  model.py
