[tool.poetry]
name = "cloverirecommend"
version = "0.1.0"
description = ""
authors = [
    "Aleksey Kerkin <aleksey.kerkin@yandex.ru>",
    "Svetlana Chernoivanova <>",
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
torch = "^2.5.1"
scikit-learn = "^1.5.2"
prefect = "^3.1.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
